JDBC-6217 Move Oracle driver package discovery to driver interface